# cookiecutter-python_package

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: Makefile  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.pkg_name}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.project_name}}/: test_init.py
