[project]
name = "{{ cookiecutter.project_name }}"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[project.scripts]
{{ cookiecutter.project_name }} = "{{ cookiecutter.project_name }}:main"

[project.optional-dependencies]
dev = ["build", "black", "flake8", "pylint", "pytest"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
pythonpath = [
    "./src"
]

