[project]
name = "{{ cookiecutter.pkg_name }}"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[project.scripts]
{{ cookiecutter.pkg_name }} = "{{ cookiecutter.pkg_name }}:main"

[project.optional-dependencies]
dev = ["build", "black", "flake8", "pylint", "pytest", "pytest-cov"]
sec = ["bandit", "safety", "pip-audit"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts ="--cov=src --cov-report=html"
testpaths = ["tests"]
pythonpath = [
    "."
]
